src/test/resources/expected/test-exception-15.kore.golden
Parse error: ../src/test/resources//test-exception-15.kore:6:8:
  |
6 |     #f{S}() []
  |        ^
unexpected 'S'
expecting '#'
